# flask-tutorial

./: pyproject.toml  setup.py
flaskr/: __init__.py  auth.py  blog.py  db.py
flaskr/templates/: base.html
flaskr/templates/blog/: create.html  index.html
tests/: conftest.py  test_auth.py  test_blog.py  test_db.py  test_factory.py
